# mcp-github-memory-server

./: .gitignore  Cargo.toml  FIRST_COMMIT_SUMMARY.md  FOLDER_LINKING_IMPLEMENTATION.md  README.md
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: performance.rs
crates/benchmarks/src/: datasets.rs  harness.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compat/: Cargo.toml
crates/compat/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  model.rs  project.rs  traits.rs  validate.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/index/tantivy/: Cargo.toml
crates/index/tantivy/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  methods.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/storage/ephemeral/: Cargo.toml
crates/storage/ephemeral/src/: lib.rs
crates/storage/github/: Cargo.toml
crates/storage/github/src/: lib.rs
crates/storage/local/: Cargo.toml
crates/storage/local/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/fixtures/compat_basic/: records.jsonl
crates/testing/src/: lib.rs
crates/testing/src/snapshots/: mcp_gitmem_testing__conformance__import_fixture_notes.snap  mcp_gitmem_testing__conformance__search_slim_items.snap
docs/: AGENTS.md  CHANGELOG.md  DAEMON_SETUP.md  FOLDER_LINKING_GITHUB.md  IMPLEMENTATION_PLAN.md  INSTALL.md  README.md  SPEC.md  implementation-plan.md
docs/integration/: stdio-mcp.md
docs/migration/: guide.md
docs/notes/: 2025-10-27-status.md
docs/troubleshooting/: auto-push-fix.md  cursor-stdio-vs-http.md  macos-security.md
examples/: gitmem.yaml
scripts/: fix-macos-security.sh  install.sh  install_macos.sh  verify-daemon.sh
