[workspace]
members = [
  "crates/core",
  "crates/proto",
  "crates/storage/github",
  "crates/storage/local",
  "crates/storage/ephemeral",
  "crates/index/tantivy",
  "crates/crypto",
  "crates/server",
  "crates/cli",
  "crates/compat",
  "crates/testing",
  "crates/benchmarks"
]
resolver = "2"
default-members = ["crates/server", "crates/cli"]

[workspace.package]
edition = "2021"
authors = ["MCP GitMem Team"]
license = "Apache-2.0 OR MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[workspace.metadata.ci]
msrv = "1.89.0"
index_default = "milli"
