[package]
name = "mcp-gitmem-benchmarks"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
tempfile = "3"

[dependencies.mcp-gitmem-core]
path = "../core"

[dependencies.mcp-gitmem-index-tantivy]
path = "../index/tantivy"

[dependencies.mcp-gitmem-storage-ephemeral]
path = "../storage/ephemeral"

[dependencies.mcp-gitmem-storage-local]
path = "../storage/local"

[dependencies.mcp-gitmem-compat]
path = "../compat"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }

[[bench]]
name = "performance"
harness = false
