[package]
name = "mcp-gitmem-compat"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Basic-memory importers and API shims for GitMem"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mcp-gitmem-core = { path = "../core" }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
