[package]
name = "mcp-gitmem-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Core domain model, validation, and traits for MCP GitHub Memory Server"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

