[package]
name = "mcp-gitmem-storage-github"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "GitHub storage adapter for GitMem"

[dependencies]
mcp-gitmem-core = { path = "../../core" }
mcp-gitmem-storage-local = { path = "../local" }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
url = "2"
sha2 = "0.10"
hex = "0.4"

[features]
remote-git = ["git2"]

[dependencies.git2]
version = "0.18"
optional = true
