[package]
name = "mcp-gitmem-storage-local"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Local filesystem storage adapter for GitMem"

[dependencies]
mcp-gitmem-core = { path = "../../core" }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "io-util", "time"] }
tracing = "0.1"
fs4 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hex = "0.4"
sha2 = "0.10"
regex = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
url = "2"
